unpackaged/main/default/objects/Early_Adopter_Product_Information__c/Early_Adopter_Product_Information__c.object-meta.xml
<CustomObject>
    <label>Early Adopter Product Information</label>
    <nameField>
        <displayFormat>EAP-{0000000}</displayFormat>
        <label>Early Adopter Product Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Early Adopter Product Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>