unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Apps__c.field-meta.xml
<CustomField>
    <fullName>Apps__c</fullName>
    <label>Apps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Receivable Processing</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Asset Booking</fullName>
            </value>
            <value>
                <fullName>Assets Core</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Business ETL</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Catalogues and Suppliers</fullName>
            </value>
            <value>
                <fullName>Charts</fullName>
            </value>
            <value>
                <fullName>Ci Anywhere Compatibility</fullName>
            </value>
            <value>
                <fullName>Ci Anywhere Hybrid Runtime</fullName>
            </value>
            <value>
                <fullName>Ci Anywhere Web Runtime</fullName>
            </value>
            <value>
                <fullName>CMIS</fullName>
            </value>
            <value>
                <fullName>Common Business</fullName>
            </value>
            <value>
                <fullName>Connected Content</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Corporate Directory</fullName>
            </value>
            <value>
                <fullName>CPM Core</fullName>
            </value>
            <value>
                <fullName>CRM System Management</fullName>
            </value>
            <value>
                <fullName>Crystal Reports</fullName>
            </value>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>Debtors</fullName>
            </value>
            <value>
                <fullName>Distributed Processor</fullName>
            </value>
            <value>
                <fullName>Dynamic Entities</fullName>
            </value>
            <value>
                <fullName>ECM Core</fullName>
            </value>
            <value>
                <fullName>ECM Tasks</fullName>
            </value>
            <value>
                <fullName>Enterprise Budgeting</fullName>
            </value>
            <value>
                <fullName>Expense Reporting</fullName>
            </value>
            <value>
                <fullName>Financials Management</fullName>
            </value>
            <value>
                <fullName>Financials Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>