unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Customer_Satisfaction_Comment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Comment__c</fullName>
    <label>Customer Satisfaction Comment</label>
    <type>TextArea</type>
</CustomField>