unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date Status Active</label>
    <type>Date</type>
</CustomField>