unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Early_Adopter__c.field-meta.xml
<CustomField>
    <fullName>Early_Adopter__c</fullName>
    <label>Early Adopter</label>
    <referenceTo>Early_Adopter__c</referenceTo>
    <relationshipLabel>Early Adopter Product Information</relationshipLabel>
    <relationshipName>Early_Adopter_Product_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>