unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status__c</fullName>
    <label>Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Development Partner</fullName>
            </value>
            <value>
                <fullName>Interested Observer</fullName>
            </value>
            <value>
                <fullName>Early Adopter</fullName>
            </value>
            <value>
                <fullName>Mainstream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>