unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Early Adopter</fullName>
            </value>
            <value>
                <fullName>New Sale</fullName>
            </value>
            <value>
                <fullName>Planned Early Adopter</fullName>
            </value>
            <value>
                <fullName>Self-Registered</fullName>
            </value>
            <value>
                <fullName>Information Only</fullName>
            </value>
            <value>
                <fullName>Closed-Customer no longer interested</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>