unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Go_Live_Blocker__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Blocker__c</fullName>
    <label>Go Live Blocker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available Software - not enough to run my business process</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Documentation and Training</fullName>
            </value>
            <value>
                <fullName>Engagement from TechnologyOne</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Project in Progress</fullName>
            </value>
            <value>
                <fullName>Resources availability - Customer</fullName>
            </value>
            <value>
                <fullName>Resources availability - TechnologyOne</fullName>
            </value>
            <value>
                <fullName>Software Quality</fullName>
            </value>
            <value>
                <fullName>Support Process</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Live &amp; Happy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>