unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Go_Live_Blocker_Comment__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Blocker_Comment__c</fullName>
    <label>Go Live Blocker Comment</label>
    <type>TextArea</type>
</CustomField>