unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>