unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Original_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Live_Date__c</fullName>
    <label>Original Live Date</label>
    <type>Date</type>
</CustomField>