unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Product_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Installation_Date__c</fullName>
    <label>Production Installation Date</label>
    <type>Date</type>
</CustomField>