unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <label>Product Owner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brendan Andrea</fullName>
            </value>
            <value>
                <fullName>Iain Rouse</fullName>
            </value>
            <value>
                <fullName>Jarad Evans</fullName>
            </value>
            <value>
                <fullName>Julian Marshall</fullName>
            </value>
            <value>
                <fullName>Ken Donohoe</fullName>
            </value>
            <value>
                <fullName>Kris Brown</fullName>
            </value>
            <value>
                <fullName>Lachlan Aldred</fullName>
            </value>
            <value>
                <fullName>Matthew Deshon</fullName>
            </value>
            <value>
                <fullName>Matthew Mahoney</fullName>
            </value>
            <value>
                <fullName>Michael Luhrs</fullName>
            </value>
            <value>
                <fullName>Peter Blackford</fullName>
            </value>
            <value>
                <fullName>Roy de Bruin</fullName>
            </value>
            <value>
                <fullName>Scott Gilmour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>