unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Responsible_CAM__c.field-meta.xml
<CustomField>
    <fullName>Responsible_CAM__c</fullName>
    <formula>Early_Adopter__r.Account__r.Owner.FirstName + &#39; &#39; +  Early_Adopter__r.Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible CAM</label>
    <type>Text</type>
</CustomField>