unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Responsible_Practice_Lead__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Practice_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Practice Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Early_Adopter_Product_Information1</relationshipName>
    <type>Lookup</type>
</CustomField>