unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Responsible_R_D_Director__c.field-meta.xml
<CustomField>
    <fullName>Responsible_R_D_Director__c</fullName>
    <label>Responsible R&amp;D Director</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Craik</fullName>
            </value>
            <value>
                <fullName>Brendan Andrea</fullName>
            </value>
            <value>
                <fullName>Brett Hooker</fullName>
            </value>
            <value>
                <fullName>Peter Beahan</fullName>
            </value>
            <value>
                <fullName>Peter Butler</fullName>
            </value>
            <value>
                <fullName>Scott Gilmour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>