unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Revised_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Live_Date__c</fullName>
    <label>Revised Live Date</label>
    <type>Date</type>
</CustomField>