unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending commencement</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Installed in Test</fullName>
            </value>
            <value>
                <fullName>Installed in Prod</fullName>
            </value>
            <value>
                <fullName>Registered Interest</fullName>
            </value>
            <value>
                <fullName>Closed - Not Installing</fullName>
            </value>
            <value>
                <fullName>New Early Adopter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>