unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Test_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Installation_Date__c</fullName>
    <label>Test Installation Date</label>
    <type>Date</type>
</CustomField>