unpackaged/main/default/objects/Early_Adopter_Product_Information__c/fields/Traffic_LIght__c.field-meta.xml
<CustomField>
    <fullName>Traffic_LIght__c</fullName>
    <label>Traffic LIght</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>